--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
     .pe-5.ps-5.pt-2
         if user
             section
-                h2.text-center.p-3.text-white Üdvözöljük 
+                h2.text-center.p-3.text-white Üdvözöllek 
                     span.nice-text(style="text-shadow: 0 0 5px rgb(200, 200, 200, 0.1);")= user.name
                     span !
                 .container
