--- a/public/css/index.css
+++ b/public/css/index.css
@@ -141,6 +141,8 @@ textarea {
     border-radius: 0px !important;
     box-shadow: 0px 0px 15px rgb(72, 72, 72, 0.2) !important;
     background-color: white;
+    resize: none;
+    overflow: hidden;
     height: auto;
 }
 
