további textarea bővítés

--- a/views/index.pug
+++ b/views/index.pug
@@ -23,7 +23,7 @@ block content
                                                 .row
                                                     .col-sm
                                                         .me-1
-                                                            button(type="submit", name="submitpost" style="border-radius: 10px !important;").btn.btn-primary.btn-lg.mt-2.gomb
+                                                            button(type="submit", name="submitpost").btn.btn-primary.btn-lg.mt-2.gomb
                                                                 i.fas.fa-pencil-alt.me-2
                                                                 | Posztolás
                                                     //.col-sm
