--- a/views/part_post.pug
+++ b/views/part_post.pug
@@ -49,5 +49,5 @@
                 .col-sm-10
                     textarea(oninput="auto_size(this)" rows='1' type="text", name="text", placeholder="Ide írhatod a kommentedet").form-control.rounded
                 .col-sm-2 
-                    input(type="submit", value="Kommentelés!").btn.btn-primary
+                    input(type="submit", value="Kommentelés!" ).btn.btn-secondary.gomb
         
