--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,6 +36,7 @@ html(lang='hu')
         block styles
     body.gradient-form.gradient-custom-1
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
+        script(src="https://rawgit.com/jackmoore/autosize/master/dist/autosize.min.js")
         
 
         - var hunTextFormat = function (name) {
@@ -248,6 +249,7 @@ html(lang='hu')
             script(src="/js/notif.js?v=1", type="text/javascript")
         script(src="/js/bg.js?v=1", type="text/javascript")
         block scripts
+
 
 
         script.
