--- a/views/new_password.pug
+++ b/views/new_password.pug
@@ -14,8 +14,8 @@ block content
                                 .card-body.p-md-5.mx-md-4
                                     .text-center
                                         img(src='images/logo.png', style='width: 185px;', alt='logo')
-                                        h4.mt-1.mb-5.pb-1 Ünnepeljünk
-                                            span.nice-text  együtt
+                                        h4.mt-1.mb-5.pb-1 Új jelszó
+                                            span.nice-text  megadása
                                             span !
 
                                     form(action="/login", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
@@ -28,7 +28,6 @@ block content
                                             i.fa.fa-lock.me-2
                                             | Jelszó
                                         input(type="password", name="password", placeholder="*******", required="ture" value="asdasd").form-control.rounded.mb-3
-                                        a(href="/new_password_request").small Elfelejtetted a jelszavad?
                                         br
                                         a(href="/register").small Még nincs fiókod?
                                         br
