--- a/views/new_password.pug
+++ b/views/new_password.pug
@@ -20,20 +20,22 @@ block content
 
                                     form(action="/login", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
                                         label.form-label(for='form2Example11')
-                                            i.fas.fa-user.me-2
-                                            | E-mail cím
-                                        input(type="email", name="email", placeholder="pl.: pelda@janos.com", required="ture" value="teszt@teszt.teszt").form-control.rounded.mb-3
+                                            i.fas.fa-lock.me-2
+                                            | Jelszó
+                                        input(type="password", name="password", placeholder="*******", required="ture" value="asdasd").form-control.rounded.mb-3
 
                                         label.form-label(for='form2Example22')
                                             i.fa.fa-lock.me-2
-                                            | Jelszó
+                                            | Jelszó újra
                                         input(type="password", name="password", placeholder="*******", required="ture" value="asdasd").form-control.rounded.mb-3
+                                        
+                                        input(type="submit", name="submit" value="Új jelszó létrehozása").btn.btn-primary.gradient-custom-2.gomb
+                                        br
+                                        br
+                                        a(href="/login").small Bejelentkezés
                                         br
                                         a(href="/register").small Még nincs fiókod?
-                                        br
-                                        br
-                                        .row
-                                            input(type="submit", name="submit" value="Bejelentkezés").btn.btn-primary.gradient-custom-2
+
 
                             .col-lg-6.d-flex.align-items-center
                                 img.loginpic(src='images/kep.png')
