email megerősítés és jelszó visszaállítás

--- a/views/email_confirm.pug
+++ b/views/email_confirm.pug
@@ -18,7 +18,7 @@ block content
                                             span.nice-text  megerősítés
                                             span !
 
-                                    form(action="/login", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
+                                    form(action="/email_confirm", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
                                         
                                         label.form-label(for='form2Example11')
                                             i.fas.fa-check.me-2
