--- a/views/new_password_code.pug
+++ b/views/new_password_code.pug
@@ -18,12 +18,12 @@ block content
                                             span.nice-text  kód
                                             span !
 
-                                    form(action="/login", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
+                                    form(action="/new_password_code", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
                                         label.form-label(for='form2Example11')
                                             i.fas.fa-check.me-2
                                             | Email ellenőrző kód
 
-                                        input(type="text", maxlength="6", name="emailkod", placeholder="123456", required="ture").form-control.rounded.mb-3.szelessegemail
+                                        input(type="text", maxlength="6", name="jelszokod", placeholder="123456", required="true").form-control.rounded.mb-3.szelessegemail
                                         
                                         input(type="submit", name="submit" value="Jóváhagyás").btn.btn-primary.gradient-custom-2.gomb.szelesseginputgomb
                                         br
