--- a/views/new_password_request.pug
+++ b/views/new_password_request.pug
@@ -18,11 +18,11 @@ block content
                                             span.nice-text  helyreállítás
                                             span !
 
-                                    form(action="/login", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
+                                    form(action="/new_password_request", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
                                         label.form-label(for='form2Example11')
                                             i.fas.fa-user.me-2
                                             | E-mail cím
-                                        input(type="email", name="email", placeholder="pl.: pelda@janos.com", required="ture").form-control.rounded.mb-3
+                                        input(type="email", name="email", placeholder="pl.: pelda@janos.com", required="true").form-control.rounded.mb-3
 
                                         
                                         input(type="submit", name="submit" value="Helyreállítás").btn.btn-primary.gradient-custom-2.gomb
