--- a/views/new_password.pug
+++ b/views/new_password.pug
@@ -18,16 +18,16 @@ block content
                                             span.nice-text  megadása
                                             span !
 
-                                    form(action="/login", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
+                                    form(action="/new_password", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
                                         label.form-label(for='form2Example11')
                                             i.fas.fa-lock.me-2
                                             | Jelszó
-                                        input(type="password", name="password", placeholder="*******", required="ture" value="asdasd").form-control.rounded.mb-3
+                                        input(type="password", name="password", placeholder="*******", required="true" value="asdasd").form-control.rounded.mb-3
 
                                         label.form-label(for='form2Example22')
                                             i.fa.fa-lock.me-2
                                             | Jelszó újra
-                                        input(type="password", name="password", placeholder="*******", required="ture" value="asdasd").form-control.rounded.mb-3
+                                        input(type="password", name="password_again", placeholder="*******", required="true" value="asdasd").form-control.rounded.mb-3
                                         
                                         input(type="submit", name="submit" value="Új jelszó létrehozása").btn.btn-primary.gradient-custom-2.gomb
                                         br
