poszt törlésénél nem megy vissza az indexre

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -43,6 +43,7 @@ html(lang='hu')
         -   name = name.replace("á", "a");
         -   name = name.replace("é", "e");
         -   name = name.replace("í", "i");
+        -   name = name.replace("ó", "o");
         -   name = name.replace("ö", "o");
         -   name = name.replace("ő", "o");
         -   name = name.replace("ü", "u");
