--- a/views/user.pug
+++ b/views/user.pug
@@ -33,7 +33,7 @@ block content
 
         if posts && posts.length!=0
             for post in posts
-                include part_post
+                include part_post_user
         else 
             p(style="font-style: italic;").text-muted Hmm, úgy tűnik ez a felhasználó még nem posztolt semmit!
 
