--- a/views/birthdays.pug
+++ b/views/birthdays.pug
@@ -21,7 +21,7 @@ block content
                 div(style="font-size: 20px;")
                     a(href=makeUserUrl(b))
                         span= b.name
-                    span  e hónap 
+                    span  a hónap 
                     span= parseBday(b.birth_day)
                     span . napján lesz 
                     span= parseAge(b.birth_day) 
