--- a/views/settings.pug
+++ b/views/settings.pug
@@ -56,7 +56,7 @@ block content
                 .col-sm-4
                     span
 
-                form#delete-form(action="/user/deletee", method="GET").col-sm
+                form#delete-form(action="/user/delete", method="POST").col-sm
                     br
                     input(id="delete-btn" type="submit", name="submit" value="Fiókom törlése").btn.btn-outline-danger
                     br
