--- a/views/admin.pug
+++ b/views/admin.pug
@@ -9,9 +9,12 @@ block content
 
         if users
             for user in users
-                img(src='/images/profiles/' + user.profile, alt='logo').pb-4.me-2.avatarkep
-                a(href=makeUserUrl(user) style="font-size: 20px;")= user.name
-                br
+                .container
+                    form#delete-form(action="/admin/" + user.id + "/delete", method="POST").col-sm
+                        img(src='/images/profiles/' + user.profile, alt='logo').pb-4.me-2.avatarkep
+                        a(href=makeUserUrl(user) style="font-size: 20px; margin-right: 10px;")= user.name
+                        input(id="delete-btn" type="submit" value="x" title="Törlés").btn-sm.btn.btn-danger.gomb
+                        br
 
         else 
             p(style="font-style: italic;").text-muted Nincsenek felhasználók!
