--- a/views/admin.pug
+++ b/views/admin.pug
@@ -14,7 +14,7 @@ block content
                         img(src='/images/profiles/' + user.profile, alt='logo').pb-4.me-2.avatarkep
                         a(href=makeUserUrl(user) style="font-size: 20px; margin-right: 10px;")= user.name
                         if !user.admin
-                            input(id="delete-btn" type="submit" value="x" title="Törlés").btn-sm.btn.btn-danger.gomb
+                            input(id="delete-btn-admin" type="submit" value="x" title="Törlés").btn-sm.btn.btn-danger.gomb
                         br
 
         else 
