--- a/views/event_create.pug
+++ b/views/event_create.pug
@@ -1,8 +1,8 @@
 extends layout 
 
 block content
-    main.section-white
-        h1.ms-3.mt-3.fw-bold
+    section.section-white
+        h1.fw-bold
             <i class="fas fa-calendar-plus me-2"></i>
             | Esemény meghirdetése
         hr
