--- a/views/new_password_code.pug
+++ b/views/new_password_code.pug
@@ -14,14 +14,14 @@ block content
                                 .card-body.p-md-5.mx-md-4
                                     .text-center
                                         img(src='images/logo.png', style='width: 185px;', alt='logo')
-                                        h4.mt-1.mb-5.pb-1 Új jelszóhoz
+                                        h4.mt-1.mb-5.pb-1 Jelszó-helyreállítási
                                             span.nice-text  kód
                                             span !
 
                                     form(action="/new_password_code", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
                                         label.form-label(for='form2Example11')
                                             i.fas.fa-check.me-2
-                                            | Email ellenőrző kód
+                                            | Jelszó-helyreállítási kód
 
                                         input(type="text", maxlength="6", name="jelszokod", placeholder="123456", required="true").form-control.rounded.mb-3.szelessegemail
                                         
